<resources>
    <string name="app_name">MySchoolNotes</string>
    <string name="registromayus">REGISTRO</string>
    <string name="registro">Registro</string>
    <string name="loginmayus">INICIO DE SESIÓN</string>
    <string name="login">Inicio de sesión</string>
    <string name="correo">correo:</string>
    <string name="correohint">Introduce el correo</string>
    <string name="contra">contraseña:</string>
    <string name="contrahint">Introduce la contraseña</string>
    <string name="nuevocontacto">Nuevo contacto</string>
    <string name="notas">Notas</string>
    <string name="vercontacto">Ver contactos</string>
    <string name="contactos">Contactos</string>
    <string name="titulohint">Introduce el título</string>
    <string name="contenidohint">Introduce el contenido</string>
    <string name="nombre">Nombre</string>
    <string name="nombrehint">Introduce el nombre</string>
    <string name="alias">Alias</string>
    <string name="aliashint">Introduce el alias</string>
    <string name="tlf">Número móvil</string>
    <string name="tlfhint">Introduce el número (9 char.)</string>
    <string name="mail">Email</string>
    <string name="mailhint">Introduce el email</string>
    <string name="direccion">Domicilio</string>
    <string name="direccionhint">Introduce el domicilio</string>
    <string name="modificar">Contacto</string>
    <string name="add">AÑADIR</string>
    <string name="del">BORRAR</string>
    <string name="edit">GUARDAR</string>
    <string name="call">LLAMAR</string>
    <string name="realcall">LLAMAR DE VERDAD</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="division">/</string>
    <string name="cuadrado">X2</string>
    <string name="multiplicacion">X</string>
    <string name="inv">INV</string>
    <string name="borrar">DEL</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="comentario">Comentario: </string>
    <string name="calculadoraBTN">Calculadora</string>
    <string name="asunto">Asunto: *</string>
    <string name="email">Correo electrónico: *</string>
    <string name="puntuacion">Puntuación: *</string>
    <string name="emailhint">Introduce el correo electrónico</string>
    <string name="asuntohint">Introduce el asunto</string>
    <string name="comentariohint">Introduce el comentario</string>
    <string name="enviar">Enviar</string>
    <string name="obligatorios">* Campos obligatorios</string>
    <string name="calculadora">Calculadora</string>
    <string name="contacto">Contacto</string>
    <string name="sergio">Sergio Tuero Gonzalez</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
</resources>