<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393636"
    android:backgroundTint="#393636"
    tools:context=".activities.CalculadoraActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#F44336"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:backgroundTint="#F44336"
        android:text="@string/borrar"
        android:textSize="28sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/siete"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/ocho"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/cuatro"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/cinco"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/uno"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/dos"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="186dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/cero"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="94dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/punto"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/seis"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/tres"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#FE9600"
        android:text="@string/nueve"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/btnInv"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:backgroundTint="#C5C6CA"
        android:text="@string/inv"
        android:textColor="#000000"
        android:textSize="30sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEntre"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:backgroundTint="#C5C6CA"
        android:text="@string/division"
        android:textColor="#000000"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <Button
        android:id="@+id/btnPor"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#C5C6CA"
        android:text="@string/multiplicacion"
        android:textColor="#000000"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#C5C6CA"
        android:text="@string/resta"
        android:textColor="#000000"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#C5C6CA"
        android:text="+"
        android:textColor="#000000"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="90dp"
        android:layout_height="108dp"
        android:backgroundTint="#C5C6CA"
        android:text="@string/igual"
        android:textColor="#000000"
        android:textSize="32sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="382dp"
        android:layout_height="127dp"
        android:layout_marginTop="-5dp"
        android:background="#656363"
        android:text=" "
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="382dp"
        android:layout_height="71dp"
        android:layout_marginBottom="-1dp"
        android:background="#656363"
        android:text=" "
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntro"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCuadrado"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:backgroundTint="#C4C5C9"
        android:text="@string/cuadrado"
        android:textColor="#000000"
        android:textSize="30sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>